@@ -397,4 +397,10 @@ sed "/^From:/d" |/usr/bin/inews -h -S -f `/usr/bin/tmda-address -d`
 
 </pre></blockquote>
 
+<li>For <a href="http://www.mutt.org/" TARGET="Resource Window">Mutt</a>
+with the VVV-NNTP patch applied, see the following 
+<a href="http://mla.libertine.org/tmda-users/200203/msg00366.html" TARGET="Resource Window">instructions</a>.
+
+<p>
+
 </ul>
