@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Mar 15 10:49:38 2002 -->
+<!-- Mon Mar 25 13:41:53 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -546,6 +546,12 @@ inews.sh:
 sed "/^From:/d" |/usr/bin/inews -h -S -f `/usr/bin/tmda-address -d` 
 
 </pre></blockquote>
+
+<li>For <a href="http://www.mutt.org/" TARGET="Resource Window">Mutt</a>
+with the VVV-NNTP patch applied, see the following 
+<a href="http://mla.libertine.org/tmda-users/200203/msg00366.html" TARGET="Resource Window">instructions</a>.
+
+<p>
 
 </ul>
 
