@@ -1,3 +1,7 @@
+2002-03-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* config-client.ht: Link to Mutt/VVV-NNTP instructions.
+
 2002-03-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* config-client.ht: Add dated address config for the TIN
